style.css
html{
  scroll-behavior: smooth;
}
body {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  line-height: 1.6;
  margin: 0;
  padding: 0;
  background-color: black;
  color: #ffffff;
}
/* ṣelecting the text */
::selection {
  background: yellow;
  color: red;
}

.nav-bar{
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  padding: 10px 15px;
  width: 100%;
  margin-top: 0;
  position: fixed;
  background-color: #1f1f1f;
  z-index: 99;
}

.open-menu,.close-menu{
  display: none;
  position: absolute;
  top: 30px;
  right: 10%;
  transform: translateY(-50%);
  cursor: pointer;
}

.open-menu>img{
  position: absolute;
  top: 10px;
  right: 10px;
  height: 20px;

}
.close-menu img{
  height: 20px;
}
.logo img{
  float: left;
  width: 120px;
  filter: drop-shadow(0px 0px 15px red);
}
.menu{
  display: flex;
  margin-right: 30px;
}
.menu li{
  /* border: 2px solid red; */
  display: inline-block;
  margin: 0px 15px;
  
}
.menu li a{
  position: relative;
  text-decoration: none;
  color: white;
  font-weight:bold;
}
.menu li a:hover{
  background-clip: text;
  background: linear-gradient(90deg,red,aqua);
  -webkit-background-clip: text;
  color: transparent;

}
.menu li a::after{
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  height: 1px;
  width: 0%;
  background: white;
  transition: 0.5s ease-in-out;
}
.menu li a:hover::after{
  background: linear-gradient(90deg,red,aqua);
  width: 100%;
}
.container {
  margin: auto;
  padding: 15px;
  color: white;
  font-weight: bold;
  overflow: hidden;
  /* border: 3px solid #f1f1f1;   */
}
/* Parallax effect */
.parallax {
  overflow: hidden;
  position: relative;
  padding: 20px 15px;
  color: #ffffff;
}
#about .container{
  
  padding-top: 120px;
}
#skills .container{
  
  padding-top: 120px;
}
#experience .container{
  
  padding-top: 120px;
}
#projects .container{
  
  padding-top: 120px;
}
#education .container{
  
  padding-top: 120px;
}
#certifications .container{
  
  padding-top: 120px;
}

.parallax .background-image {
  filter: blur(4px);
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  object-fit:cover;
}

#experience {

  margin-top: 100px;
  /* border: 2px solid red; */
}
#projects{
  margin-top: 100px;
}
header {
  display: flex;
  flex-direction:column ;
  color: #ffffff;
  
}
header > .container {
  width: 100%;
  background: #1f1f1f;
  margin-top: 100px;
  padding: 15px;
}
header h1 {
  margin: 0;
  font-size: 32px;
  margin-bottom: 5px;
}

header .animated-text {
  font-size: 24px;
  white-space: nowrap;
}
#role {
  letter-spacing: 1px;
  /* text-shadow:0px 0px 2px palevioletred; */
  color: rgb(226, 22, 245);
}



/* Smoother text animation */
.animated-text span {
  transition: all 0.5s ease-in-out;
}

/* Social media icons */
.contact a {
  margin: 0 10px;
  text-decoration: none;
}

.contact a:hover {
  color: #ffd700;
}

/* Card hover effect */

section {
  padding: 40px 0;
}

section h2 {
  margin-top: 0;
  /* border-bottom: 2px solid #ffd700; */
  display: inline-block;
  padding-bottom: 5px;
}
hr{
  background:rgb(253,255,0);
  height: 3px;
  width: 100%;
  left: 0;
  
}
footer {
  background: #1f1f1f;
  color: #ffffff;
  text-align: center;
  padding: 10px 0;
  position: sticky;
  margin-bottom: 10px;

}

footer .contact {
  margin-top: 10px;
  text-align: center;
}

footer .contact a {
  color: #ffd700;
  margin: 0 10px;
}


ul {
  list-style: none;
  padding: 0;
}

ul li {
  margin-bottom: 10px;
}

.experience-item,
.project-item,
.education-item,
.certification-item {
  margin-bottom: 20px;
}

h3 {
  margin: 0;
}

.app-cards {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  gap: 20px;
}

.card {
  background: #1f1f1f;
  border-radius: 5px;
  padding: 20px;
  height: 120px;
  width: 30%;
  box-sizing: border-box;
  text-align: center;
  text-decoration: none;
  color: inherit;
  box-shadow: -1px -1px 1px 1px;
}

.card:hover {
  background: #303030;
  transform: translateY(-5px);
  transition: all 0.3s ease;
}
.card h3 {
  color: #ffd700;
  text-decoration: none;
}

.card p {
  color: #ffffff;
}

@media (max-width: 768px) {
  .container {
    width: 100%;
  }
  #hamburger{
    cursor: pointer;
    position: absolute;
    right: 50px;
    display: block;
  }
  header > .container {
    text-align: center;
  }

  header .contact {
    margin-top: 10px;
    text-align: center;
  }

  /* nav ul {
    display: none;
    flex-direction: column;
    margin-right: 0;
  } */

  nav ul li {
    margin: 10px 0;
  }

  .app-cards {
    flex-direction: column;
  }

  .card {
    width: 100%;
  }

  section h2 {
    width: 100%;
    text-align: center;
  }

  .experience-item,
  .project-item,
  .education-item,
  .certification-item {
    margin-bottom: 15px;
  }
}

@media (max-width: 480px) {
  html,body{
    width: 100%;
    margin: 0;
    padding: 0;
    overflow-x: hidden;
  }
  header > .container {
    /* width: 100%; */
    /* background: #1f1f1f; */
    margin-top: 110px;
    /* padding: 15px; */
  }
  
  header h1 {
    font-size: 24px;
  }
  .logo img{
    scale: 0.9;
  }
  .menu{
    position: fixed;
    display: flex;
    visibility: hidden;
    flex-direction: column;
    align-items: center;
    gap: 20px;
    padding: 20px;
    width: 70%;
    height: 100vh;
    top: 0;
    transition:all 0.5s linear;
    background: #1f1f1f;
    z-index: 100;

  }
  .open-menu,.close-menu{
    display: block;
  }
  .open-menu img{
    margin-right: 20px;
  }
  header .animated-text {
    font-size: 20px;
    height: auto;
  }
  
  nav ul li a {
    font-size: 14px;
  }
  .card{
    width: 80%;
  }
  
  .experience-item,
  .project-item,
  .education-item,
  .certification-item {
    margin-bottom: 10px;
  }
}

